	  The format conversion from prior releases is handled transparently,
	  but releases older than 1.4.12/1.6.5 will not understand this new
	  format.  The automatic format conversion can be avoided by running
	  the following command on the MDS:
	  	'tunefs.lustre --param="mdt.quota_type=ug1" $MDTDEV'.
	  For more information, please refer to bugzilla 13904.

Severity   : normal
Frequency  : always, on ppc.
Bugzilla   : 14856
Description: cleanup in ptlrpc code, related to ppc platform
Details    : store magic in native order avoid panic's in recovery on ppc node
             and forbid from this error in future. Also fix posibily of twice swab
             data. Fix get lov striping to userpace.

Severity   : normal
Bugzilla   : 15756
Frequency  : rare, replay get lost on server
Description: server incorrectly drop resent replays lead to recovery failure.
Details    : do not drop replay according to msg flags, instead we check the
             per-export recovery request queue for duplication of transno.

Severity   : normal
Bugzilla   : 14835
Frequency  : after recovery
Description: precreate to many object's after del orphan.
Details    : del orphan st in oscc last_id == next_id and this triger growing
             count of precreated objects. Set flag LOW to skip increase count
             of precreated objects.

Severity   : normal
Bugzilla   : 15139
Frequency  : rare, on clear nid stats
Description: ASSERTION(client_stat->nid_exp_ref_count == 0)
Details    : when clean nid stats sometimes try destroy live entry,
             and this produce panic in free.

Severity   : major
Bugzilla   : 15575
Description: Stack overflow during MDS log replay
Details    : ease stack pressure by using a thread dealing llog_process.

Severity   : minor
Frequency  : very rare
Bugzilla   : 13380
Description: MDT cannot be unmounted, reporting "Mount still busy"
Details	   : Mountpoint references were being leaked during open reply