@@ -96,6 +96,9 @@ options:
 .BI nosvc
 Only start the MGC (and MGS, if co-located) for a target service, and not the actual service.
 .TP
+.BI nomgs
+Start a MDT with a co-located MGS without starting the MGS.
+.TP
 .BI exclude= ostlist
 Start a client or MDT with a (colon-separated) list of known inactive OSTs.
 .TP
