@@ -24,6 +24,13 @@ tbd Sun Microsystems, Inc.
 	  	'tunefs.lustre --param="mdt.quota_type=ug1" $MDTDEV'.
 	  For more information, please refer to bugzilla 13904.
 
+Severity   : major
+Bugzilla   : 14134
+Description: enable MGS and MDT services start separately
+Details    : add a 'nomgs' option in mount.lustre to enable start a MDT with
+             a co-located MGS without starting the MGS, which is a complement
+             to 'nosvc' mount option.
+
 Severity   : normal
 Frequency  : always, on ppc.
 Bugzilla   : 14856
